--- a/Dagger2/app/src/main/AndroidManifest.xml
+++ b/Dagger2/app/src/main/AndroidManifest.xml
@@ -3,17 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.aws.dagger2">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MyApplication"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
+        <activity android:name=".ui.main.MainActivity"></activity>
         <activity android:name=".ui.auth.AuthActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
