--- a/Dagger2/app/build.gradle
+++ b/Dagger2/app/build.gradle
@@ -78,4 +78,10 @@ dependencies {
     // LifeCycleExtensions
     def lifecycle_version = "2.3.1"
     implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:$lifecycle_version"
+
+    // architecture comp. navigation
+    def nav_version = "2.3.5"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-runtime-ktx:$nav_version"
 }
